product part added

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,7 +1,9 @@
-.body{
-    background-color: rgb(231, 231, 69);
+body{
+    background-color: rgb(240, 240, 240);
 }
 
-.card-body h5{
+/* .card-body h5{
     color: rgb(56, 83, 83);
-}
+} */
+
+
