--- a/styles/style.css
+++ b/styles/style.css
@@ -1,44 +1,55 @@
-body{
+body {
     background-color: rgb(240, 240, 240);
 }
 
-/* .card-body h5{
-    color: rgb(56, 83, 83);
-} */
-
-
-/* Footer */
-#footer{
-    background: rgb(165, 165, 165);
+.tempNavBg {
+    background-color: rgb(165, 165, 165);
 }
 
-#footer ul{
+.activePage {
+    font-weight: bolder;
+    background-color: #d3d3d3;
+    pointer-events: none;
+}
+
+.nav-item a:hover {
+    font-weight: bolder;
+    background-color: #d3d3d3;
+}
+
+/* Footer */
+#footer {
+    background: rgb(185, 185, 185);
+}
+
+#footer ul {
     list-style: none;
     padding-left: 0px;
 }
 
-#footer ul a{
+#footer ul a {
     text-decoration: none;
     color: #3a3a3a;
     padding: 10px 0px;
 }
 
-#footer ul a:hover{
+#footer ul a:hover {
     color: rgb(211, 211, 211);
     font-weight: bolder;
 }
 
-#footer p a{
+#footer p a {
     text-decoration: none;
     color: rgb(27, 108, 184);
 }
 
-#footer .social{
+#footer .social {
     text-align: left;
 }
 
-#footer .social a{
+#footer .social a {
     margin-right: 15px;
+    margin-bottom: 15px;
     display: inline-block;
     color: #ffffff;
     width: 30px;
@@ -51,9 +62,7 @@ body{
     background: #555555;
 }
 
-#footer .social a:hover{
+#footer .social a:hover {
     color: white;
     background-color: #292929;
 }
-
-
