--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,6 @@
 body {
-    background-color: rgb(240, 240, 240);
+    background-color: rgb(250, 250, 250);
+    width: 100vw;
 }
 
 .tempNavBg {
@@ -65,4 +66,14 @@ body {
 #footer .social a:hover {
     color: white;
     background-color: #292929;
+}
+
+
+/* Shop */
+.breadcrumb {
+    padding: 8px 15px;
+    margin-bottom: 20px;
+    background-color: #ffffff;
+    border-radius: 5px;
+    box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.5);
 }
