--- a/styles/style.css
+++ b/styles/style.css
@@ -77,3 +77,15 @@ body {
     border-radius: 5px;
     box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.5);
 }
+
+.flow{
+    overflow-y: hidden;
+    width: 100%;
+    
+}
+
+.sDetails{
+    height: auto;
+    width: 100%;
+    background-color: black;
+}
