--- a/styles/style.css
+++ b/styles/style.css
@@ -87,5 +87,8 @@ body {
 .sDetails{
     height: auto;
     width: 100%;
-    background-color: black;
+    border-radius: 5px;
+    padding: 10px;
+    margin-bottom: 10px;
+    background-color: rgb(255, 255, 255);
 }
